--- a/src/pages/apps/apps.html
+++ b/src/pages/apps/apps.html
@@ -18,7 +18,7 @@
   <ion-grid>
     <ion-row >
       <ion-col (tap)="goToView('dataEntry')" >
-        <div class="contents" padding>
+        <div class="apps-contents" padding>
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/img/dataEntry.png">
           </ion-thumbnail>
@@ -26,7 +26,7 @@
         </div>
       </ion-col>
       <ion-col (tap)="goToView('eventCapture')" >
-        <div class="contents" padding>
+        <div class="apps-contents" padding>
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/img/eventCapture.png">
           </ion-thumbnail>
@@ -36,7 +36,7 @@
     </ion-row>
     <ion-row>
       <ion-col (tap)="goToView('dashboard')" >
-        <div class="contents" padding>
+        <div class="apps-contents" padding>
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/img/dashboard.png">
           </ion-thumbnail>
@@ -44,7 +44,7 @@
         </div>
       </ion-col>
       <ion-col (tap)="goToView('report')"  >
-        <div class="contents" padding>
+        <div class="apps-contents" padding>
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/img/reports.png">
           </ion-thumbnail>
@@ -53,52 +53,5 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-
-  <!--<ion-grid>-->
-    <!--<ion-row >-->
-      <!--<ion-col (tap)="goToView('dataEntry')" >-->
-        <!--<ion-list >-->
-          <!--<ion-item >-->
-            <!--<ion-thumbnail >-->
-              <!--<img class="menu-app-icon-list" src="assets/img/dataEntry.png">-->
-            <!--</ion-thumbnail>-->
-            <!--<p class="menu-app" >Data Entry</p>-->
-          <!--</ion-item>-->
-        <!--</ion-list>-->
-      <!--</ion-col>-->
-      <!--<ion-col (tap)="goToView('eventCapture')" >-->
-        <!--<ion-list >-->
-          <!--<ion-item>-->
-            <!--<ion-thumbnail >-->
-              <!--<img class="menu-app-icon-list" src="assets/img/eventCapture.png">-->
-            <!--</ion-thumbnail>-->
-            <!--<p class="menu-app" >Event Capture</p>-->
-          <!--</ion-item>-->
-        <!--</ion-list>-->
-      <!--</ion-col>-->
-    <!--</ion-row>-->
-    <!--<ion-row>-->
-      <!--<ion-col (tap)="goToView('dashboard')" >-->
-        <!--<ion-list>-->
-          <!--<ion-item>-->
-            <!--<ion-thumbnail >-->
-              <!--<img class="menu-app-icon-list" src="assets/img/dashboard.png">-->
-            <!--</ion-thumbnail>-->
-            <!--<p class="menu-app">Dashboard</p>-->
-          <!--</ion-item>-->
-        <!--</ion-list>-->
-      <!--</ion-col>-->
-      <!--<ion-col (tap)="goToView('report')"  >-->
-        <!--<ion-list>-->
-          <!--<ion-item>-->
-            <!--<ion-thumbnail >-->
-              <!--<img class="menu-app-icon-list" src="assets/img/reports.png">-->
-            <!--</ion-thumbnail>-->
-            <!--<p class="menu-app">Standard Reports</p>-->
-          <!--</ion-item>-->
-        <!--</ion-list>-->
-      <!--</ion-col>-->
-    <!--</ion-row>-->
-  <!--</ion-grid>-->
 
 </ion-content>
