--- a/src/pages/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry-form/data-entry-form.html
@@ -159,73 +159,109 @@
     </ion-item-group>
     <ion-list></ion-list>
 
+
+
     <!-- pagination -->
-    <ion-item-group>
-      <ion-item-divider>
-        <ion-row *ngIf="entryFormSections.length > 1">
-          <ion-col>
-            <button color="font-color" ion-button full clear small (tap)="changePagination(0)">
-              <ion-icon name="ios-arrow-back-outline"></ion-icon>
-              <ion-icon name="ios-arrow-back-outline"></ion-icon>
-              <ion-icon name="ios-arrow-back-outline"></ion-icon>
-              <ion-icon name="ios-arrow-back-outline"></ion-icon>
-            </button>
-          </ion-col>
-          <ion-col>
-            <button color="font-color" ion-button full clear small (tap)="changePagination(currentPage - 1)">
-              <ion-icon name="ios-arrow-back-outline"></ion-icon>
-              <ion-icon name="ios-arrow-back-outline"></ion-icon>
-            </button>
-          </ion-col>
-          <ion-col>
-            <button ion-button color="font-color" full clear small >
-              {{ paginationLabel }}
-            </button>
-          </ion-col>
-          <ion-col >
-            <button color="font-color" ion-button full clear small (tap)="changePagination(currentPage + 1)">
-              <ion-icon name="ios-arrow-forward-outline"></ion-icon>
-              <ion-icon name="ios-arrow-forward-outline"></ion-icon>
-            </button>
-          </ion-col>
 
-          <ion-col >
-            <button color="font-color" ion-button full clear small (tap)="changePagination(entryFormSections.length -1)">
-              <ion-icon name="ios-arrow-forward-outline"></ion-icon>
-              <ion-icon name="ios-arrow-forward-outline"></ion-icon>
-              <ion-icon name="ios-arrow-forward-outline"></ion-icon>
-              <ion-icon name="ios-arrow-forward-outline"></ion-icon>
-            </button>
-          </ion-col>
-
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <button color="favorite" ion-button full [disabled] ="isDataSetCompleted || isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
-              Complete
-            </button>
-          </ion-col>
-          <ion-col>
-            <button color="danger" ion-button full [disabled] = "!isDataSetCompleted || isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
-              Undo Complete
-            </button>
-          </ion-col>
-        </ion-row>
-
-
-        <div *ngIf="isDataSetCompletenessProcessRunning">
-          <ion-item >
-            <div style="text-align: center" item-left >
-              <page-loading loadingSize="small"></page-loading>
-            </div>
-            {{ dataSetCompletenessProgressMessage }}
-          </ion-item>
+    <ion-row *ngIf="entryFormSections.length > 1">
+      <ion-col>
+        <div class="pagination-button" (tap)="changePagination(0)">
+          <ion-icon name="ios-arrow-back-outline"></ion-icon>
+          <ion-icon name="ios-arrow-back-outline"></ion-icon>
         </div>
+      </ion-col>
+      <ion-col>
+        <div class="pagination-button" (tap)="changePagination(currentPage - 1)">
+          <ion-icon name="ios-arrow-back-outline"></ion-icon>
+        </div>
+      </ion-col>
+      <ion-col>
+        <div class="pagination-label">
+          {{ paginationLabel }}
+        </div>
+      </ion-col>
+      <ion-col>
+        <div class="pagination-button" (tap)="changePagination(currentPage + 1)">
+          <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+        </div>
+      </ion-col>
 
-        <div *ngIf="isDataSetCompleted && !isDataSetCompletenessProcessRunning">Completed by: <b>{{ dataSetCompletenessInformation.name }}</b> at: <b>{{ dataSetCompletenessInformation.date }}</b></div>
+      <ion-col>
+        <div class="pagination-button" (tap)="changePagination(entryFormSections.length -1)">
+          <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+          <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+        </div>
+      </ion-col>
 
-      </ion-item-divider>
-    </ion-item-group>
+      <!--<ion-col>-->
+      <!--<button color="font-color" ion-button full round small (tap)="changePagination(0)">-->
+      <!--<ion-icon name="ios-arrow-back-outline"></ion-icon>-->
+      <!--<ion-icon name="ios-arrow-back-outline"></ion-icon>-->
+      <!--<ion-icon name="ios-arrow-back-outline"></ion-icon>-->
+      <!--<ion-icon name="ios-arrow-back-outline"></ion-icon>-->
+      <!--</button>-->
+      <!--</ion-col>-->
+      <!--<ion-col>-->
+      <!--<button color="font-color" ion-button full round small (tap)="changePagination(currentPage - 1)">-->
+      <!--<ion-icon name="ios-arrow-back-outline"></ion-icon>-->
+      <!--<ion-icon name="ios-arrow-back-outline"></ion-icon>-->
+      <!--</button>-->
+      <!--</ion-col>-->
+      <!--<ion-col>-->
+      <!--<button ion-button color="font-color" full clear small >-->
+      <!--{{ paginationLabel }}-->
+      <!--</button>-->
+      <!--</ion-col>-->
+      <!--<ion-col >-->
+      <!--<button color="font-color" ion-button full round small (tap)="changePagination(currentPage + 1)">-->
+      <!--<ion-icon name="ios-arrow-forward-outline"></ion-icon>-->
+      <!--<ion-icon name="ios-arrow-forward-outline"></ion-icon>-->
+      <!--</button>-->
+      <!--</ion-col>-->
+
+      <!--<ion-col >-->
+      <!--<button color="font-color" ion-button full round small (tap)="changePagination(entryFormSections.length -1)">-->
+      <!--<ion-icon name="ios-arrow-forward-outline"></ion-icon>-->
+      <!--<ion-icon name="ios-arrow-forward-outline"></ion-icon>-->
+      <!--<ion-icon name="ios-arrow-forward-outline"></ion-icon>-->
+      <!--<ion-icon name="ios-arrow-forward-outline"></ion-icon>-->
+      <!--</button>-->
+      <!--</ion-col>-->
+
+    </ion-row>
+    <ion-row></ion-row>
+    <ion-row>
+      <ion-col>
+        <button color="favorite" ion-button full [disabled] ="isDataSetCompleted || isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
+          Complete
+        </button>
+      </ion-col>
+      <ion-col>
+        <button color="danger" ion-button full [disabled] = "!isDataSetCompleted || isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
+          Undo Complete
+        </button>
+      </ion-col>
+    </ion-row>
+
+
+    <div *ngIf="isDataSetCompletenessProcessRunning">
+      <ion-item >
+        <div style="text-align: center" item-left >
+          <page-loading loadingSize="small"></page-loading>
+        </div>
+        {{ dataSetCompletenessProgressMessage }}
+      </ion-item>
+    </div>
+
+    <div *ngIf="isDataSetCompleted && !isDataSetCompletenessProcessRunning">Completed by: <b>{{ dataSetCompletenessInformation.name }}</b> at: <b>{{ dataSetCompletenessInformation.date }}</b></div>
+
+    <!--<ion-item-group>-->
+      <!--<ion-item-divider>-->
+
+        <!---->
+
+      <!--</ion-item-divider>-->
+    <!--</ion-item-group>-->
 
   </div>
 
