update login and error messages on login

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -48,7 +48,7 @@
               {{ progressTracker.communication.message }}
             </span>
             <span *ngIf="progressTracker.communication.message == '' ">
-              Establish connection to server
+              Establishing connection to server
             </span>
           </span>
             <div style="text-align: center" item-right >
@@ -72,7 +72,7 @@
               {{ progressTracker.entryForm.message }}
             </span>
             <span *ngIf="progressTracker.entryForm.message == '' ">
-              Load aggregate metadata
+             Aggregate metadata
             </span>
           </span>
             <div style="text-align: center" item-right >
@@ -95,7 +95,7 @@
               {{ progressTracker.event.message }}
             </span>
             <span *ngIf="progressTracker.event.message == '' ">
-              Load tracker metadata
+              Tracker metadata
             </span>
           </span>
 
@@ -119,7 +119,7 @@
               {{ progressTracker.report.message }}
             </span>
             <span *ngIf="progressTracker.report.message == '' ">
-              Load Report metadata
+              Report metadata
             </span>
           </span>
 
