fixing issues on update metadata

--- a/src/pages/update-manager-home/update-manager-home.html
+++ b/src/pages/update-manager-home/update-manager-home.html
@@ -39,7 +39,7 @@
         <ion-col>
           <ion-item (tap)="hideAndShowContents('updateMetadata')">
             <span ion-text [color]="(updateManagerObject.updateMetadata.isExpanded) ?'current' : 'font-color'">
-              Metadata update
+              Metadata Update
             </span>
 
             <ion-icon [color]="(updateManagerObject.updateMetadata.isExpanded) ?'current' : 'font-color'"  *ngIf="!updateManagerObject.updateMetadata.isExpanded" name="ios-arrow-down" item-right></ion-icon>
