--- a/src/pages/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry-form/data-entry-form.html
@@ -164,88 +164,47 @@
 
 
 
+
+
+
+
     <!-- pagination -->
 
     <ion-row *ngIf="entryFormSections.length > 1">
-      <ion-col>
-        <div class="pagination-button" (tap)="changePagination(0)">
-          <ion-icon name="ios-arrow-back-outline"></ion-icon>
-          <ion-icon name="ios-arrow-back-outline"></ion-icon>
+      <ion-col  col-2 col-sm-1>
+        <div style="text-align: center">
+          <button mini ion-fab color="whitecolor" (tap)="changePagination(currentPage - 1)">
+            <ion-icon name="ios-arrow-back-outline" ></ion-icon>
+          </button>
         </div>
       </ion-col>
-      <ion-col>
-        <div class="pagination-button" (tap)="changePagination(currentPage - 1)">
-          <ion-icon name="ios-arrow-back-outline"></ion-icon>
-        </div>
-      </ion-col>
-      <ion-col>
+      <ion-col  col-2 col-sm-1>
         <div class="pagination-label">
           {{ paginationLabel }}
         </div>
       </ion-col>
-      <ion-col>
-        <div class="pagination-button" (tap)="changePagination(currentPage + 1)">
-          <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+      <ion-col  col-2 col-sm-1>
+        <div style="text-align: center">
+          <button mini ion-fab color="whitecolor" (tap)="changePagination(currentPage + 1)">
+            <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+          </button>
         </div>
       </ion-col>
-
-      <ion-col>
-        <div class="pagination-button" (tap)="changePagination(entryFormSections.length -1)">
-          <ion-icon name="ios-arrow-forward-outline"></ion-icon>
-          <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+      <ion-col  col-6 col-sm-4 *ngIf="!isDataSetCompleted">
+        <div style="text-align: center">
+          <button color="favorite" ion-button full round [disabled] ="isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
+            Complete
+          </button>
         </div>
       </ion-col>
-
-      <!--<ion-col>-->
-      <!--<button color="font-color" ion-button full round small (tap)="changePagination(0)">-->
-      <!--<ion-icon name="ios-arrow-back-outline"></ion-icon>-->
-      <!--<ion-icon name="ios-arrow-back-outline"></ion-icon>-->
-      <!--<ion-icon name="ios-arrow-back-outline"></ion-icon>-->
-      <!--<ion-icon name="ios-arrow-back-outline"></ion-icon>-->
-      <!--</button>-->
-      <!--</ion-col>-->
-      <!--<ion-col>-->
-      <!--<button color="font-color" ion-button full round small (tap)="changePagination(currentPage - 1)">-->
-      <!--<ion-icon name="ios-arrow-back-outline"></ion-icon>-->
-      <!--<ion-icon name="ios-arrow-back-outline"></ion-icon>-->
-      <!--</button>-->
-      <!--</ion-col>-->
-      <!--<ion-col>-->
-      <!--<button ion-button color="font-color" full clear small >-->
-      <!--{{ paginationLabel }}-->
-      <!--</button>-->
-      <!--</ion-col>-->
-      <!--<ion-col >-->
-      <!--<button color="font-color" ion-button full round small (tap)="changePagination(currentPage + 1)">-->
-      <!--<ion-icon name="ios-arrow-forward-outline"></ion-icon>-->
-      <!--<ion-icon name="ios-arrow-forward-outline"></ion-icon>-->
-      <!--</button>-->
-      <!--</ion-col>-->
-
-      <!--<ion-col >-->
-      <!--<button color="font-color" ion-button full round small (tap)="changePagination(entryFormSections.length -1)">-->
-      <!--<ion-icon name="ios-arrow-forward-outline"></ion-icon>-->
-      <!--<ion-icon name="ios-arrow-forward-outline"></ion-icon>-->
-      <!--<ion-icon name="ios-arrow-forward-outline"></ion-icon>-->
-      <!--<ion-icon name="ios-arrow-forward-outline"></ion-icon>-->
-      <!--</button>-->
-      <!--</ion-col>-->
-
-    </ion-row>
-    <ion-row></ion-row>
-    <ion-row>
-      <ion-col>
-        <button color="favorite" ion-button full [disabled] ="isDataSetCompleted || isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
-          Complete
-        </button>
-      </ion-col>
-      <ion-col>
-        <button color="danger" ion-button full [disabled] = "!isDataSetCompleted || isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
-          Undo Complete
-        </button>
+      <ion-col  col-6 col-sm-4 *ngIf="isDataSetCompleted">
+        <div style="text-align: center">
+          <button  color="danger"  ion-button full round [disabled] = "isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
+            Undo Complete
+          </button>
+        </div>
       </ion-col>
     </ion-row>
-
 
     <div *ngIf="isDataSetCompletenessProcessRunning">
       <ion-item >
@@ -258,13 +217,6 @@
 
     <div *ngIf="isDataSetCompleted && !isDataSetCompletenessProcessRunning">Completed by: <b>{{ dataSetCompletenessInformation.name }}</b> at: <b>{{ dataSetCompletenessInformation.date }}</b></div>
 
-    <!--<ion-item-group>-->
-      <!--<ion-item-divider>-->
-
-        <!---->
-
-      <!--</ion-item-divider>-->
-    <!--</ion-item-group>-->
 
   </div>
 
