--- a/src/pages/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry-form/data-entry-form.html
@@ -178,7 +178,7 @@
           </button>
         </div>
       </ion-col>
-      <ion-col  col-2 col-sm-2>
+      <ion-col  col-3 col-sm-2>
         <div class="pagination-label">
           {{ paginationLabel }}
         </div>
@@ -190,16 +190,16 @@
           </button>
         </div>
       </ion-col>
-      <ion-col  col-6 col-sm-8 *ngIf="!isDataSetCompleted">
+      <ion-col  col-5 col-sm-8 *ngIf="!isDataSetCompleted">
         <div style="text-align: center">
-          <button color="favorite" ion-button full round [disabled] ="isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
+          <button class="pagination-button" color="favorite" ion-button full round [disabled] ="isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
             Complete
           </button>
         </div>
       </ion-col>
-      <ion-col  col-6 col-sm-8 *ngIf="isDataSetCompleted">
+      <ion-col  col-5 col-sm-8 *ngIf="isDataSetCompleted">
         <div style="text-align: center">
-          <button  color="danger"  ion-button full round [disabled] = "isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
+          <button class="pagination-button"  color="danger"  ion-button full round [disabled] = "isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
             Undo Complete
           </button>
         </div>
