update header for visible selections on event list as well as update notification in case no form or program has not being assigned to selected orgunit

--- a/src/pages/event-field-selection-menu/event-field-selection-menu.html
+++ b/src/pages/event-field-selection-menu/event-field-selection-menu.html
@@ -7,12 +7,11 @@
 <ion-header >
   <ion-toolbar color="primary">
     <ion-title>
-      Event List Fields selection
+      Visible list headers
     </ion-title>
     <ion-buttons start>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
         close
-        <!--<ion-icon name="md-close"></ion-icon>-->
       </button>
     </ion-buttons>
   </ion-toolbar>
