udate ui for dashboard

--- a/src/pages/apps/apps.html
+++ b/src/pages/apps/apps.html
@@ -57,7 +57,7 @@
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/img/updateManager.png">
           </ion-thumbnail>
-          <p class="menu-app" >Sync & Update</p>
+          <p class="menu-app" >Sync</p>
         </div>
       </ion-col>
       <ion-col col-4 (tap)="goToView('settings')" >
