--- a/src/pages/dashboard-search/dashboard-search.html
+++ b/src/pages/dashboard-search/dashboard-search.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the DashboardSearch page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-toolbar color="primary">
@@ -28,7 +22,7 @@
       <ion-col width="100">
         <ion-list>
           <ion-item *ngFor="let dashboard of dashboards" (tap)="setCurrentDashboard(dashboard)" class="list-separator">
-            <span ion-text [color]="(selectedDashboardName == dashboard.name) ?'current' : 'font-color'" >{{ dashboard.name }}</span>
+            <span ion-text [color]="(currentDashboardName == dashboard.name) ?'current' : 'font-color'" >{{ dashboard.name }}</span>
           </ion-item>
           <ion-item *ngIf="dashboards.length == 0">
             There no dashboard found
