--- a/src/pages/report-home/report-home.html
+++ b/src/pages/report-home/report-home.html
@@ -16,21 +16,11 @@
 <ion-content class="report">
 
   <div *ngIf="loadingData">
-    <ion-grid>
-      <ion-row>
-        <ion-col width="100">
-          <ion-list>
-            <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
-              {{ message }}
-              <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right color="favorite"></ion-icon>
-              <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
-                <page-loading loadingSize="small"></page-loading>
-              </div>
-            </ion-item>
-          </ion-list>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+    <ion-row >
+      <ion-col width="100">
+        <page-loading loadingSize="large" [loadingMessage]="loadingMessages[loadingMessages.length - 1]"></page-loading>
+      </ion-col>
+    </ion-row>
   </div>
 
   <div *ngIf="!loadingData">
