--- a/src/pages/report-view/report-view.html
+++ b/src/pages/report-view/report-view.html
@@ -18,7 +18,7 @@
 
     <div *ngIf="loadingData">
       <ion-row >
-        <ion-col width="100">
+        <ion-col >
           <page-loading loadingSize="large" [loadingMessage]="loadingMessage"></page-loading>
         </ion-col>
       </ion-row>
