--- a/src/pages/event-capture-form/event-capture-form.html
+++ b/src/pages/event-capture-form/event-capture-form.html
@@ -16,7 +16,7 @@
   <div *ngIf="loadingData">
     <ion-grid>
       <ion-row>
-        <ion-col width="100">
+        <ion-col >
           <page-loading loadingSize="large" [loadingMessage]="loadingMessage"></page-loading>
         </ion-col>
       </ion-row>
