--- a/src/pages/event-view/event-view.html
+++ b/src/pages/event-view/event-view.html
@@ -17,7 +17,7 @@
   <div *ngIf="loadingData">
     <ion-grid>
       <ion-row>
-        <ion-col width="100">
+        <ion-col >
           <ion-list>
             <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
               {{ message }}
